# uchu

./: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/uchu/: Cargo.toml
crates/uchu/src/: lib.rs  recognizer.rs  token.rs
python/tests/: test_uchu.py
python/uchu/: __init__.py  uchu.pyi
resources/: meta.json
