[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["tkhshtsh0917"]
publish = false

[workspace.dependencies]
pyo3 = "0.24.2"

[profile.release]
opt-level = 3
strip = true
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
