[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "uchu"
requires-python = ">=3.10"
authors = [{name = "tkhshtsh0917"}]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
readme = "README.md"
dependencies = [
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    "spacy>=3.8.5",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
manifest-path = "crates/uchu/Cargo.toml"
module-name = "uchu"
strip = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
