[package]
name = "uchu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uchu"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
